# callmor-remote-desktop

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: macos-agent.yml  windows-agent.yml
config/coturn/: turnserver.conf
crates/agent/: Cargo.toml
crates/agent-core/: Cargo.toml
crates/agent-core/src/: config.rs  display_code.rs  enrollment.rs  heartbeat.rs  input.rs  lib.rs
crates/agent-mac/: Cargo.toml
crates/agent-mac/src/: capture.rs  input.rs  main.rs  session.rs
crates/agent-win/: Cargo.toml  build.rs
crates/agent-win/src/: capture.rs  input.rs  main.rs  portable.rs  service_install.rs  session.rs
crates/agent/src/: input.rs  main.rs
crates/api/: Cargo.toml
crates/api/src/: audit.rs  auth_extractor.rs  email.rs  jwt.rs  main.rs  state.rs  storage.rs
crates/api/src/routes/: adhoc.rs  admin.rs  agent.rs  audit_log.rs  auth.rs  downloads.rs  email_test.rs  enrollment.rs  invitations.rs  machines.rs  mod.rs  recordings.rs  sessions.rs  settings.rs  turn.rs  users.rs
crates/relay/: Cargo.toml
crates/relay/src/: auth.rs  main.rs
crates/shared/: Cargo.toml
crates/shared/src/: db.rs  lib.rs  models.rs  protocol.rs
deploy/: callmor-agent.service  callmor-api.service  callmor-infra.service  callmor-relay.service  callmor-web.service  callmor-xvfb.service
migrations/: 20260421232239_initial_schema.sql  20260422010120_teams_and_access.sql  20260422021543_superadmin.sql  20260422022838_app_settings.sql  20260422024021_audit_events.sql  20260422024837_recordings.sql  20260422041546_schema_review_fixes.sql  20260422045557_enrollment_tokens.sql  20260422103841_adhoc_machines.sql  20260422200000_rustdesk_machine_binding.sql
packaging/deb/: agent.conf.template  agent.conf.template.adhoc  callmor-agent.service  postinst  prerm
packaging/macos/: com.callmor.agent.plist  postinstall
packaging/windows/: README.txt  agent.conf.template  install.bat  installer.nsi  portable.nsi  rustdesk-installer.nsi  uninstall.bat
scripts/: build-deb.sh  build-rustdesk.sh  build-windows-agent.sh  build-windows-installer.sh  generate-secrets.sh  grant-superadmin.sh
web/: index.html  package-lock.json  package.json  serve.json  vite.config.ts
web/public/: relay-test.html  viewer-test.html  webrtc-test.html
web/src/: App.tsx
web/src/components/: AuditLog.tsx  NavBar.tsx  PublicLayout.tsx
web/src/lib/: api.ts  auth.tsx
web/src/pages/: About.tsx  AcceptInvite.tsx  Activity.tsx  Admin.tsx  Connect.tsx  Dashboard.tsx  Download.tsx  Landing.tsx  Login.tsx  Privacy.tsx  Recordings.tsx  Register.tsx  RustdeskSetup.tsx  Security.tsx  Team.tsx  Terms.tsx  Viewer.tsx
