[package]
name = "callmor-agent-mac"
version.workspace = true
edition.workspace = true

[[bin]]
name = "callmor-agent"
path = "src/main.rs"

[dependencies]
callmor-shared = { path = "../shared" }
callmor-agent-core = { path = "../agent-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
futures-util = "0.3"
bytes = "1"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

# WebRTC + H.264 (same pure-Rust stack as Windows agent)
webrtc = "0.14"
openh264 = "0.8"

# macOS system APIs for screen capture and input injection
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"

# scap provides cross-platform screen capture that uses ScreenCaptureKit on macOS
[target.'cfg(target_os = "macos")'.dependencies.scap]
version = "0.0.8"
