[package]
name = "callmor-agent-win"
version.workspace = true
edition.workspace = true

[[bin]]
name = "callmor-agent"
path = "src/main.rs"

[dependencies]
callmor-shared = { path = "../shared" }
callmor-agent-core = { path = "../agent-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
futures-util = "0.3"
bytes = "1"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

# Cross-platform WebRTC (pure Rust)
webrtc = "0.14"

# H.264 encoding (Cisco OpenH264, bundled)
openh264 = "0.8"

# Portable-mode native GUI — pure Rust, no external deps on Windows.
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"

# Windows APIs (DXGI, D3D11, SendInput, services)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Threading",
] }
windows-service = "0.8"

# On non-Windows (Linux), provide stubs so the crate still type-checks for CI/dev.
# The binary won't actually work, but `cargo check --target x86_64-pc-windows-gnu` will.
