[package]
name = "callmor-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "callmor-agent"
path = "src/main.rs"

[dependencies]
callmor-shared = { path = "../shared" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
