[package]
name = "callmor-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "callmor-agent"
path = "src/main.rs"

[dependencies]
callmor-shared = { path = "../shared" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
gstreamer = "0.23"
gstreamer-sdp = "0.23"
gstreamer-webrtc = "0.23"
