[package]
name = "callmor-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "callmor-agent"
path = "src/main.rs"

[dependencies]
callmor-shared = { path = "../shared" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
gstreamer = { version = "0.23", features = ["v1_26"] }
gstreamer-sdp = { version = "0.23", features = ["v1_26"] }
gstreamer-webrtc = { version = "0.23", features = ["v1_22"] }
x11rb = { version = "0.13", features = ["xtest"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
