[package]
name = "callmor-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "callmor-api"
path = "src/main.rs"

[dependencies]
callmor-shared = { path = "../shared" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
axum = "0.8"
