[package]
name = "callmor-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "callmor-api"
path = "src/main.rs"

[dependencies]
callmor-shared = { path = "../shared" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.9"
sha2 = "0.10"
hex = "0.4"
tokio-util = { version = "0.7", features = ["io"] }
